<resources>
    <string name="app_name">My Application</string>


    <!--    these are for the names of the icons in the nav Bar -->
    <string name="navbar_user_icon_name">User</string>
    <string name="navbar_buy_icon_name">Buy Items</string>
    <string name="navbar_sell_icon_name">Sell Items</string>
    <string name="navbar_chat_icon_name">Chat</string>
    <string name="buy_again">Buy Again</string>


    <!--    These are the hints that go on the Register page editTexts and Buttons-->
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="fill_name_hint_string">Full Name</string>
    <string name="confirm_pass_hint_string">Confirm Password</string>
    <string name="zip_code_hint_string">Zip Code</string>
    <string name="go_to_login">Go To Login Screen</string>
    <string name="sign_up">Sign Up</string>

    <!--    These are the string that go in my Rgistrations.kt file -->
    <string name="register_success_string">Registration successful!</string>
    <string name="register_failed_string">Registration failed! Please try again later</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_item">NAME YOUR ITEM</string>
    <string name="item_price">PRICE</string>
    <string name="item_brand">BRAND</string>
    <string name="describe_item">DESCRIPTION</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="choose_image">CHOOSE IMAGE</string>
    <string name="upload_item">Upload Item</string>

    <array name="condition">
        <item name="type">CONDITION</item>
        <item name="new">New</item>
        <item name="fairly_new">Worn 1-3 times</item>
        <item name="fair">Worn a lot</item>
        <item name="worn">Old</item>
        <item name="trash">Trash</item>
    </array>

    <array name="category">
        <item name="type">CATEGORY</item>
        <item name="shirt">Shirt</item>
        <item name="pants">Pants</item>
        <item name="skirt">Skirt</item>
        <item name="shoes">Shoes</item>
        <item name="underwear">Underwear</item>
        <item name="socks">Socks</item>
        <item name="jacket">Jacket</item>
    </array>

    <array name="size">
        <item name="type">SIZE</item>
        <item name="s">Small</item>
        <item name="m">Medium</item>
        <item name="l">Large</item>
        <item name="xl">X-Large</item>
        <item name="xxl">XX-Large</item>
    </array>

</resources>
