<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="5dp"
    android:paddingVertical="5dp"
    tools:context=".Fragments.SellFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edges_light_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_item"
                android:inputType="textShortMessage" />

            <Spinner
                android:id="@+id/condition_spinner_id"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:entries="@array/condition" />

            <Spinner
                android:id="@+id/category_spinner_id"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:entries="@array/category" />

            <Spinner
                android:id="@+id/size_spinner_id"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:entries="@array/size" />

            <EditText
                android:id="@+id/editText_brand_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/item_brand"
                android:inputType="text" />

            <EditText
                android:id="@+id/editText_price_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/item_price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editText_describe_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/describe_item"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <Button
                    android:id="@+id/sell_chooseimage_button_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edges_blue"
                    android:text="@string/choose_image" />

                <Button
                    android:id="@+id/sell_uploaditem_button_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edges_blue"
                    android:text="@string/upload_item" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/item_image_id"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingHorizontal="5dp"
        android:src="@drawable/photo_camera" />
</LinearLayout>