<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:background="@drawable/app_background"
    tools:context=".RegistrationActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="193dp"
        android:layout_height="68dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/ic_clothes_hanger" />

    <Button
        android:id="@+id/select_photo_button_id"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circular_select_photo"
        android:text="Select Photo"
        android:textColor="@color/colorMyOrange"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


        <EditText
                android:id="@+id/fullName_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="30dp"

                android:ems="15"
                android:hint="@string/fill_name_hint_string"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/email_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"

                android:ems="15"
                android:hint="@string/email_hint_string"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"

                android:ems="15"
                android:hint="@string/password_hint_string"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmPassword_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"

                android:ems="15"
                android:hint="@string/confirm_pass_hint_string"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/zipcode_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"

                android:ems="15"
                android:hint="Zip Code"
                android:inputType="number" />

            <Button
                android:id="@+id/registerButtonView"
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_butn"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAppBackground" />

            <TextView
                android:id="@+id/fakeRegisterButtonView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:fontFamily="sans-serif-condensed-medium"
                android:text="Already have an account? LOG IN"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorMyOrange" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>